[package]
name = "azure-servicebus"
version = "0.2.0"
authors = ["Peter Glotfelty <glotfelty.2@osu.edu>", "Gerry Agbobada <gagbobada+git@gmail.com>"]
edition = "2018"

[dependencies]
time = "0.1"
rust-crypto = "0.2"
rustc-serialize = "0.3"
url = "2.1"
percent-encoding = "2.1"
lazy_static = "1.4"
hyper = "0.12"
futures = "0.1"
mime = "0.3.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
